--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
         var evtSource = new EventSource('/api/v1/eventstream');
         // all events
         var eventList = document.getElementById('list');
-// onmessage not working
-        // evtSource.onmessage = function (e) {
-        //     console.log(e);
-        //     var newElement = document.createElement("li");
+        // onmessage working only with event name `message`
+        evtSource.onmessage = function (e) {
+            console.log(e);
+            var newElement = document.createElement("li");
 
-        //     newElement.innerHTML = "message: " + e.data;
-        //     eventList.appendChild(newElement);
-        // }
+            newElement.innerHTML = "message: " + e.data;
+            eventList.appendChild(newElement);
+        }
         evtSource.addEventListener('ping', function (e) {
             var newElement = document.createElement("li");
 
