download the file when job finish

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
 
         newElement.innerHTML = "download_end: " + e.data;
         eventList.appendChild(newElement);
+        window.open('http://1cliquesystems.loc/uploads/1564681953expenses.pdf', '_blank');// download file
         evtSource.close();
     }, false);
 
